--- a/docs/components/authentication/sign-in.mdx
+++ b/docs/components/authentication/sign-in.mdx
@@ -14,7 +14,22 @@ description: The <SignIn /> component renders a UI for signing in users.
 
 The `<SignIn />` component renders a UI for signing in users. The functionality of the `<SignIn />` component is controlled by the instance settings you specify in your [Clerk Dashboard](https://dashboard.clerk.com). You can further customize your `<SignIn />` component by passing additional properties at the time of rendering.
 
-## Usage
+## `<SignIn />` properties
+
+All props below are optional.
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
+| `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages. Defaults to `'path'`. |
+| `path` | `string` | The path where the component is mounted on when path-based routing is used. This prop will be required for Next.js and Remix applications that do not set the appropriate environment variables, and is required for all other SDK's.<br />This prop is ignored in hash- and virtual-based routing. |
+| `redirectUrl` | `string` | Full URL or path to navigate after successful sign in or sign up.<br /> The same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value. |
+| `afterSignInUrl` | `string` | The full URL or path to navigate after a successful sign in. Defaults to `/`. |
+| `signUpUrl` | `string` | Full URL or path to the sign up page. Use this property to provide the target of the 'Sign Up' link that's rendered. |
+| `afterSignUpUrl` | `string` | The full URL or path to navigate after a successful sign up. Defaults to `/`. |
+| `initialValues` | [`SignInInitialValues`](/docs/references/javascript/types/sign-in-initial-values) | The values used to prefill the sign-in fields with. |
+
+## How to use the `<SignIn />` component
 
 Below is basic implementation of the `<SignIn />` component. You can use this as a starting point for your own implementation.
 
@@ -100,11 +115,11 @@ Below is basic implementation of the `<SignIn />` component. You can use this as
     <InjectKeys>
 
     <CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-      ```js filename="index.js"
+      ```js filename="index.ts"
       import Clerk from '@clerk/clerk-js';
       import { dark } from "@clerk/themes";
 
-      // Add a <div> element with id="sign-in" to your HTML
+      // Selects for <div id="app"> and adds a <div id="sign-in"> to it
       document.querySelector<HTMLDivElement>('#app')!.innerHTML = `
         <div
           id="sign-in"
@@ -126,28 +141,28 @@ Below is basic implementation of the `<SignIn />` component. You can use this as
       ```
 
       ```html filename="index.html"
-      <!-- Add a <div> element with id="sign-in" to your HTML -->
+      <!-- Add a <div id="sign-in"> element to your HTML -->
       <div id="sign-in"></div>
 
       <script>
         // Get this URL and Publishable Key from the Clerk Dashboard
         const clerkPublishableKey = {{pub_key}};
-        const frontendApi = '[your-domain].clerk.accounts.dev';
+        const frontendApiUrl = 'https://[your-domain].clerk.accounts.dev';
         const version = '@latest'; // Set to appropriate version
 
         // Creates asynchronous script
         const script = document.createElement('script');
-        script.setAttribute('data-clerk-frontend-api', frontendApi);
+        script.setAttribute('data-clerk-frontend-api', frontendApiUrl);
         script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
         script.async = true;
-        script.src = `https://${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
+        script.src = `${frontendApiUrl}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
 
         script.addEventListener('load', async function () {
           await window.Clerk.load();
 
           const signInComponent = document.querySelector('#sign-in');
 
-          window.Clerk.openSignIn(signInComponent, {
+          window.Clerk.mountSignIn(signInComponent, {
             appearance: {
               baseTheme: dark
             }
@@ -159,25 +174,10 @@ Below is basic implementation of the `<SignIn />` component. You can use this as
     </CodeBlockTabs>
 
     </InjectKeys>
-  </Tab>  
+  </Tab>
 </Tabs>
 
-## Properties
-
-All props below are optional.
-
-| Name | Type | Description |
-| --- | --- | --- |
-| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
-| `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages. Defaults to `'path'`. |
-| `path` | `string` | The path where the component is mounted on when path-based routing is used. This prop will be required for Next.js and Remix applications that do not set the appropriate environment variables, and is required for all other SDK's.<br />This prop is ignored in hash- and virtual-based routing. |
-| `redirectUrl` | `string` | Full URL or path to navigate after successful sign in or sign up.<br /> The same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value. |
-| `afterSignInUrl` | `string` | The full URL or path to navigate after a successful sign in. Defaults to `/`. |
-| `signUpUrl` | `string` | Full URL or path to the sign up page. Use this property to provide the target of the 'Sign Up' link that's rendered. |
-| `afterSignUpUrl` | `string` | The full URL or path to navigate after a successful sign up. Defaults to `/`. |
-| `initialValues` | [`SignInInitialValues`](/docs/references/javascript/types/sign-in-initial-values) | The values used to prefill the sign-in fields with. |
-
-## Customization
+## How to customize the `<SignIn />` component
 
 To learn about how to customize Clerk components, see the [customization documentation](/docs/components/customization/overview).
 
