--- a/docs/components/unstyled/sign-in-button.mdx
+++ b/docs/components/unstyled/sign-in-button.mdx
@@ -7,7 +7,17 @@ description: The <SignInButton> component is a button that links to the sign-in 
 
 The `<SignInButton>` component is a button that links to the sign-in page or displays the sign-in modal.
 
-## Usage
+## `<SignInButton>` properties
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `redirectUrl?` | `string` | Full URL or path to navigate after successful sign in or sign up.<br /> The same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value. |
+| `afterSignInUrl?` | `string` | The full URL or path to navigate after a successful sign in. Defaults to `/`. |
+| `afterSignUpUrl?` | `string` | The full URL or path to navigate after a successful sign up. Defaults to `/`. |
+| `mode?` | `'redirect' \| 'modal'` | Determines what happens when a user clicks on the `<SignInButton>`. Setting this to `'redirect'` will redirect the user to the sign-in route. Setting this to `'modal'` will open a modal on the current route.<br />Defaults to 'redirect'` |
+| `children?` | `React.ReactNode` | Children you want to wrap the `<SignOutButton>` in. |
+
+## How to use the `<SignInButton>` component
 
 ### Basic usage
 
@@ -73,7 +83,7 @@ In some cases, you will want to use your own button, or button text. You can do 
     return (
       <div>
         <SignInButton>
-        <button>Sign in with Clerk</button>
+          <button>Sign in with Clerk</button>
         </SignInButton>
       </div>
     );
@@ -87,7 +97,7 @@ In some cases, you will want to use your own button, or button text. You can do 
     return (
       <div>
         <SignInButton>
-        <button>Sign in with Clerk</button>
+          <button>Sign in with Clerk</button>
         </SignInButton>
       </div>
     );
@@ -101,7 +111,7 @@ In some cases, you will want to use your own button, or button text. You can do 
     return (
       <div>
         <SignInButton>
-        <button>Sign in with Clerk</button>
+          <button>Sign in with Clerk</button>
         </SignInButton>
       </div>
     );
@@ -115,20 +125,11 @@ In some cases, you will want to use your own button, or button text. You can do 
     return (
       <div>
         <SignInButton>
-        <button>Sign in with Clerk</button>
+          <button>Sign in with Clerk</button>
         </SignInButton>
       </div>
     );
   }
   ```
 </CodeBlockTabs>
-
-## Properties
-
-| Name | Type | Description |
-| --- | --- | --- |
-| `redirectUrl` | `string` | Full URL or path to navigate after successful sign in or sign up.<br /> The same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value. |
-| `afterSignInUrl` | `string` | The full URL or path to navigate after a successful sign in. Defaults to `/`. |
-| `afterSignUpUrl` | `string` | The full URL or path to navigate after a successful sign up. Defaults to `/`. |
-| `mode` | `'redirect' \| 'modal'` | Determines what happens when a user clicks on the `<SignInButton>`. Setting this to `'redirect'` will redirect the user to the sign-in route. Setting this to `'modal'` will open a modal on the current route.<br />Defaults to 'redirect'`
 
