--- a/docs/components/unstyled/sign-in-with-metamask.mdx
+++ b/docs/components/unstyled/sign-in-with-metamask.mdx
@@ -7,9 +7,9 @@ description: The `<SignInWithMetamaskButton>` component is used to complete a on
 
 The `<SignInWithMetamaskButton>` component is used to complete a one-click, cryptographically-secure login flow using MetaMask.
 
-## Usage
+## How to use the `<SignInWithMetamaskButton>` component
 
-#### Basic usage
+### Basic usage
 
 <CodeBlockTabs type="framework" options={["Next.js", "React", "Remix", "Gatsby"]}>
   ```jsx filename="pages/index.js"
@@ -19,7 +19,7 @@ The `<SignInWithMetamaskButton>` component is used to complete a one-click, cryp
     return (
       <div>
       <h1> Sign in </h1>
-        <SignInWithMetamaskButton>
+        <SignInWithMetamaskButton />
       </div>
     );
   }
@@ -32,7 +32,7 @@ The `<SignInWithMetamaskButton>` component is used to complete a one-click, cryp
     return (
       <div>
       <h1> Sign in </h1>
-        <SignInWithMetamaskButton>
+        <SignInWithMetamaskButton />
       </div>
     );
   }
@@ -45,7 +45,7 @@ The `<SignInWithMetamaskButton>` component is used to complete a one-click, cryp
     return (
       <div>
       <h1> Sign in </h1>
-        <SignInWithMetamaskButton>
+        <SignInWithMetamaskButton />
       </div>
     );
   }
@@ -58,16 +58,16 @@ The `<SignInWithMetamaskButton>` component is used to complete a one-click, cryp
     return (
       <div>
       <h1> Sign in </h1>
-        <SignInWithMetamaskButton>
+        <SignInWithMetamaskButton />
       </div>
     );
   }
   ```
 </CodeBlockTabs>
 
-#### Custom usage
+### Custom usage
 
-In some cases you will want to use your own button, or button text. You can do that by wrapping your button up.
+In some cases, you will want to use your own button, or button text. You can do that by wrapping your button in the `<SignInWithMetamaskButton>` component.
 
 <CodeBlockTabs type="framework" options={["Next.js", "React", "Remix", "Gatsby"]}>
   ```jsx filename="pages/index.js"
