--- a/docs/components/unstyled/sign-out-button.mdx
+++ b/docs/components/unstyled/sign-out-button.mdx
@@ -7,11 +7,26 @@ description: The `<SignOutButton>` component is a button that signs a user out.
 
 The `<SignOutButton>` component is a button that signs a user out. By default, it is a `<button>` tag that says **Sign Out**, but it is completely customizable by passing children.
 
-## Usage
+## `<SignOutButton>` properties
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `redirectUrl?` | `string` | Full URL or path to navigate to after signing out. |
+| `signOutOptions?` | [`SignOutOptions`](#sign-out-options) | Options for signing out. Includes `sessionId` which if passed, signs the user out of a specific session. Useful for multi-session applications. |
+| `children?` | `React.ReactNode` | Children you want to wrap the `<SignOutButton>` in. |
+
+### `SignOutOptions`
+
+The type of the `signOutOptions` prop for the `<SignOutButton>` component is defined as follows:
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `sessionId?` | `string` | The ID of a specific session to sign out of. Useful for multi-session applications. |
+| `redirectUrl? ` | `string` | Full URL or path to navigate to after signing out. |
+
+## How to use the `<SignOutButton>` component
 
 ### Basic usage
-
-The example below shows how to use the `<SignOutButton>` component. 
 
 <Tabs type="framework" items={["Next.js", "React", "Remix", "Gatsby"]}>
   <Tab>
@@ -181,14 +196,14 @@ Clicking the `<SignOutButton>` component signs the user out of all sessions. Thi
 
 You can sign out of a specific session by passing in a `sessionId` to the `signOutOptions` prop. This is useful for signing a single account out of a multi-session (multiple account) application.
 
-In the example below, the `sessionId` is retrieved from the [`useAuth()`](/docs/references/react/use-auth) hook.
+In the example below, the `sessionId` is retrieved from the [`useAuth()`](/docs/references/react/use-auth) hook. If the user is not signed in, the `sessionId` will be `null`, and the user is shown the [`<SignInButton>`](/docs/components/unstyled/sign-in-button) component. If the user is signed in, the user is shown the `<SignOutButton>` component, which when clicked, signs the user out of that specific session.
 
 <Tabs type="framework" items={["Next.js", "React", "Remix", "Gatsby"]}>
   <Tab>
     <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
       ```tsx filename="app/page.tsx"
       "use client"
-      
+
       import { SignInButton, SignOutButton, useAuth } from "@clerk/nextjs";
 
       export default function Home() {
@@ -197,7 +212,6 @@ In the example below, the `sessionId` is retrieved from the [`useAuth()`](/docs/
         if (!sessionId) {
           return (
             <div>
-              <h1> Sign in </h1>
               <SignInButton />
             </div>
           );
@@ -220,7 +234,6 @@ In the example below, the `sessionId` is retrieved from the [`useAuth()`](/docs/
         if (!sessionId) {
           return (
             <div>
-              <h1> Sign in </h1>
               <SignInButton />
             </div>
           );
@@ -246,7 +259,6 @@ In the example below, the `sessionId` is retrieved from the [`useAuth()`](/docs/
       if (!sessionId) {
         return (
           <div>
-            <h1> Sign in </h1>
             <SignInButton />
           </div>
         );
@@ -271,7 +283,6 @@ In the example below, the `sessionId` is retrieved from the [`useAuth()`](/docs/
       if (!sessionId) {
         return (
           <div>
-            <h1> Sign in </h1>
             <SignInButton />
           </div>
         );
@@ -296,7 +307,6 @@ In the example below, the `sessionId` is retrieved from the [`useAuth()`](/docs/
       if (!sessionId) {
         return (
           <div>
-            <h1> Sign in </h1>
             <SignInButton />
           </div>
         );
@@ -311,11 +321,3 @@ In the example below, the `sessionId` is retrieved from the [`useAuth()`](/docs/
     ```
   </Tab>
 </Tabs>
-
-## Properties
-
-| Name | Type | Description |
-| --- | --- | --- |
-| `redirectUrl?` | `string` | Full URL or path to navigate to after successful sign-in or sign-up. |
-| `children?` | `React.ReactNode` | children you want to wrap the `<SignOutButton>` in. |
-| `signOutOptions?` | `SignOutOptions` | Object that has a `sessionId` property. The `sessionId` can be passed in to sign out a specific session, which is useful for multisession applications. |
