--- a/docs/components/unstyled/sign-up-button.mdx
+++ b/docs/components/unstyled/sign-up-button.mdx
@@ -7,7 +7,17 @@ description: The <SignUpButton> component is a button that links to the sign-up 
 
 The `<SignUpButton>` component is a button that links to the sign-up page or displays the sign-up modal.
 
-## Usage
+## `<SignUpButton>` properties
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `redirectUrl?` | `string` | Full URL or path to navigate after successful sign in or sign up.<br /> The same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value. |
+| `afterSignInUrl?` | `string` | The full URL or path to navigate after a successful sign in. Defaults to `/`. |
+| `afterSignUpUrl?` | `string` | The full URL or path to navigate after a successful sign up. Defaults to `/`. |
+| `mode?` | `'redirect' \| 'modal'` | Determines what happens when a user clicks on the `<SignUpButton>`. Setting this to `'redirect'` will redirect the user to the sign-up route. Setting this to `'modal'` will open a modal on the current route.<br />Defaults to 'redirect'` |
+| `children?` | `React.ReactNode` | Children you want to wrap the `<SignUpButton>` in. |
+
+## How to use the `<SignUp>` button
 
 ### Basic usage
 
@@ -130,14 +140,4 @@ In some cases, you will want to use your own button, or button text. You can do 
   }
   ```
 </CodeBlockTabs>
-
-## Properties
-
-
-| Name | Type | Description |
-| --- | --- | --- |
-| `redirectUrl` | `string` | Full URL or path to navigate after successful sign in or sign up.<br /> The same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value. |
-| `afterSignInUrl` | `string` | The full URL or path to navigate after a successful sign in. Defaults to `/`. |
-| `afterSignUpUrl` | `string` | The full URL or path to navigate after a successful sign up. Defaults to `/`. |
-| `mode` | `'redirect' \| 'modal'` | Determines what happens when a user clicks on the `<SignUpButton>`. Setting this to `'redirect'` will redirect the user to the sign-up route. Setting this to `'modal'` will open a modal on the current route.<br />Defaults to 'redirect'` |
 
