--- a/docs/references/javascript/clerk/organization-methods.mdx
+++ b/docs/references/javascript/clerk/organization-methods.mdx
@@ -74,20 +74,20 @@ function createOrganization(params: CreateOrganizationParams): Promise<Organizat
   <script>
     // Get this URL and Publishable Key from the Clerk Dashboard
     const clerkPublishableKey = `{{pub_key}}`;
-    const frontendApi = 'https://[your-domain].clerk.accounts.dev';
+    const frontendApiUrl = 'https://[your-domain].clerk.accounts.dev';
     const version = '@latest'; // Set to appropriate version
-  
+
     // Creates asynchronous script
     const script = document.createElement('script');
-    script.setAttribute('data-clerk-frontend-api', frontendApi);
+    script.setAttribute('data-clerk-frontend-api', frontendApiUrl);
     script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
     script.async = true;
-    script.src = `${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
-  
+    script.src = `${frontendApiUrl}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
+
     // Adds listener to initialize ClerkJS after it's loaded
     script.addEventListener('load', async function () {
       await window.Clerk.load();
-      
+
       // Create an organization
       const org = await window.Clerk.createOrganization({
         name: 'My Organization',
