--- a/docs/components/authentication/sign-up.mdx
+++ b/docs/components/authentication/sign-up.mdx
@@ -14,9 +14,25 @@ description: The <SignUp /> component renders a UI for signing up users.
 
 The `<SignUp />` component renders a UI for signing up users. The functionality of the `<SignUp />` component is controlled by the instance settings you specify in your [Clerk Dashboard](https://dashboard.clerk.com). You can further customize your `<SignUp />` component by passing additional properties at the time of rendering.
 
-## Usage
+## `<SignUp />` properties
 
-Below is basic implementation of the `<SignUp />` component. You can use this as a starting point for your own implementation
+All props below are optional.
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
+| `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages.<br />Note: If you are using environment variables for Next.js or Remix to specify your routes, this will be set to `path`. |
+| `path` | `string` | The path where the component is mounted on when path-based routing is used<br />For example, `/sign-up`<br />This prop is ignored in hash- and virtual-based routing. |
+| `redirectUrl` | `string` | Full URL or path to navigate to after successful sign in or sign up.<br />The same as setting afterSignInUrl and afterSignUpUrl to the same value. |
+| `afterSignInUrl` | `string` | The full URL or path to navigate to after a successful sign in. Defaults to `/`. |
+| `signInUrl` | `string` | Full URL or path to the sign in page. Use this property to provide the target of the 'Sign In' link that's rendered. |
+| `afterSignUpUrl` | `string` | The full URL or path to navigate after a successful sign up. Defaults to `/`. |
+| `unsafeMetadata` | `object` | An object with the key and value for unsafeMetadata that will be saved to the user after sign up.<br />E.g. `{ "company": "companyID1234" }` |
+| `initialValues` | [`SignUpInitialValues`](/docs/references/javascript/types/sign-up-initial-values) | The values used to prefill the sign-up fields with. |
+
+## How to use the `<SignUp />` component
+
+Below is basic implementation of the `<SignUp />` component. You can use this as a starting point for your own implementation.
 
 <Tabs type="framework" items={["Next.js", "React", "Remix", "Gatsby", "JavaScript"]}>
   <Tab>
@@ -99,11 +115,11 @@ Below is basic implementation of the `<SignUp />` component. You can use this as
     <InjectKeys>
 
     <CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-      ```js filename="index.js"
+      ```js filename="index.ts"
       import Clerk from '@clerk/clerk-js';
       import { dark } from "@clerk/themes";
 
-      // Add a <div> element with id="sign-in" to your HTML
+      // Selects for <div id="app"> and adds a <div id="sign-up"> to it
       document.querySelector<HTMLDivElement>('#app')!.innerHTML = `
         <div
           id="sign-up"
@@ -125,21 +141,21 @@ Below is basic implementation of the `<SignUp />` component. You can use this as
       ```
 
       ```html filename="index.html"
-      <!-- Add a <div> element with id="sign-up" to your HTML -->
+      <!-- Add a <div="sign-up"> element to your HTML -->
       <div id="sign-up"></div>
 
       <script>
         // Get this URL and Publishable Key from the Clerk Dashboard
         const clerkPublishableKey = {{pub_key}};
-        const frontendApi = '[your-domain].clerk.accounts.dev';
+        const frontendApiUrl = 'https://[your-domain].clerk.accounts.dev';
         const version = '@latest'; // Set to appropriate version
 
         // Creates asynchronous script
         const script = document.createElement('script');
-        script.setAttribute('data-clerk-frontend-api', frontendApi);
+        script.setAttribute('data-clerk-frontend-api', frontendApiUrl);
         script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
         script.async = true;
-        script.src = `https://${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
+        script.src = `${frontendApiUrl}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
 
         script.addEventListener('load', async function () {
           await window.Clerk.load();
@@ -161,23 +177,7 @@ Below is basic implementation of the `<SignUp />` component. You can use this as
   </Tab>
 </Tabs>
 
-## Properties
-
-All props below are optional.
-
-| Name | Type | Description |
-| --- | --- | --- |
-| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
-| `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages.<br />Note: If you are using environment variables for Next.js or Remix to specify your routes, this will be set to `path`. |
-| `path` | `string` | The path where the component is mounted on when path-based routing is used<br />For example, `/sign-up`<br />This prop is ignored in hash- and virtual-based routing. |
-| `redirectUrl` | `string` | Full URL or path to navigate to after successful sign in or sign up.<br />The same as setting afterSignInUrl and afterSignUpUrl to the same value. |
-| `afterSignInUrl` | `string` | The full URL or path to navigate to after a successful sign in. Defaults to `/`. |
-| `signInUrl` | `string` | Full URL or path to the sign in page. Use this property to provide the target of the 'Sign In' link that's rendered. |
-| `afterSignUpUrl` | `string` | The full URL or path to navigate after a successful sign up. Defaults to `/`. |
-| `unsafeMetadata` | `object` | An object with the key and value for unsafeMetadata that will be saved to the user after sign up.<br />E.g. `{ "company": "companyID1234" }` |
-| `initialValues` | [`SignUpInitialValues`](/docs/references/javascript/types/sign-up-initial-values) | The values used to prefill the sign-up fields with. |
-
-## Customization
+## How to customize the `<SignUp />` component
 
 To learn about how to customize Clerk components, see the [customization documentation](/docs/components/customization/overview).
 
