--- a/docs/components/organization/organization-profile.mdx
+++ b/docs/components/organization/organization-profile.mdx
@@ -14,7 +14,18 @@ description: The `<OrganizationProfile />` component is used to render a beautif
 
 The `<OrganizationProfile />` component is used to render a beautiful, full-featured organization management UI that allows users to manage their organization profile and security settings.
 
-## Usage
+## `<OrganizationProfile />` properties
+
+All props below are optional.
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `afterLeaveOrganizationUrl` | `string` | Full URL or path to navigate after leaving an organization. |
+| `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages. |
+| `path` | `string` | The path where the component is mounted when path-based routing is used.<br />For example, `/create-org`<br />This prop is ignored in hash- and virtual-based routing. |
+| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
+
+## How to use the `<OrganizationProfile />` component
 
 <Tabs type="framework" items={["Next.js", "React", "Remix"]}>
   <Tab>
@@ -64,18 +75,7 @@ The `<OrganizationProfile />` component is used to render a beautiful, full-feat
   </Tab>
 </Tabs>
 
-## Properties
-
-All props below are optional.
-
-| Name | Type | Description |
-| --- | --- | --- |
-| `afterLeaveOrganizationUrl` | `string` | Full URL or path to navigate after leaving an organization. |
-| `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages. |
-| `path` | `string` | The path where the component is mounted when path-based routing is used.<br />For example, `/create-org`<br />This prop is ignored in hash- and virtual-based routing. |
-| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
-
-## Customization
+## How to customize the `<OrganizationProfile />` component
 
 To learn about how to customize Clerk components, see the [customization documentation](/docs/components/customization/overview).
 
