--- a/docs/components/user/user-button.mdx
+++ b/docs/components/user/user-button.mdx
@@ -11,7 +11,24 @@ The `<UserButton />` component is used to render the familiar user button UI pop
 
 Clerk is the only provider with multi-session support, allowing users to sign into multiple accounts at once and switch between them. For multisession apps, the `<UserButton />` automatically supports instant account switching, without the need of a full page reload. For more information, you can check out the [Multi-session applications guide](/docs/custom-flows/multi-session-applications#overview).
 
-## Usage
+## `<UserButton />` properties
+
+All props below are optional.
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
+| `showName` | `boolean` | Controls if the user name is displayed next to the user image button. |
+| `signInUrl` | `string` | The full URL or path to navigate to when the "Add another account" button is clicked. |
+| `userProfileMode` | `'modal' \| 'navigation'` | Controls whether clicking the "Manage your account" button will cause the [`<UserProfile />`][userprofile-ref] component to open as a modal, or if the browser will navigate to the `userProfileUrl` where [`<UserProfile />`][userprofile-ref] is mounted as a page.<br />Defaults to: `'modal'`. |
+| `userProfileUrl` | `string` | The full URL or path leading to the user management interface. |
+| `afterSignOutUrl` | `string` | The full URL or path to navigate to after a signing out from all accounts (applies to both single-session and multi-session apps). Default is `/`. |
+| `afterMultiSessionSingleSignOutUrl` | `string` | The full URL or path to navigate to after a signing out from currently active account (multisession apps). |
+| `afterSwitchSessionUrl` | `string` | The full URL or path to navigate to after a successful account change (multi-session apps). |
+| `defaultOpen` | `boolean` | Controls whether the `<UserButton />` should open by default during the first render. |
+| `userProfileProps` | `object` | Specify options for the underlying [`<UserProfile />`][userprofile-ref] component. e.g. `{additionalOAuthScopes: {google: ['foo', 'bar'], github: ['qux']}}`. |
+
+## How to use the `<UserButton />` component
 
 In this example, `<UserButton />` is mounted inside a header component, which is a common pattern on many websites and applications. When the user is signed in, they will see their avatar and be able to open the popup menu.
 
@@ -193,24 +210,7 @@ In this example, `<UserButton />` is mounted inside a header component, which is
   </Tab>
 </Tabs>
 
-## Properties
-
-All props below are optional.
-
-| Name | Type | Description |
-| --- | --- | --- |
-| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
-| `showName` | `boolean` | Controls if the user name is displayed next to the user image button. |
-| `signInUrl` | `string` | The full URL or path to navigate to when the **Add another account** button is clicked. |
-| `userProfileMode` | `'modal' \| 'navigation'` | Controls whether clicking the **Manage your account** button will cause the [`<UserProfile />`][userprofile-ref] component to open as a modal, or if the browser will navigate to the `userProfileUrl` where [`<UserProfile />`][userprofile-ref] is mounted as a page.<br />Defaults to: `'modal'`. |
-| `userProfileUrl` | `string` | The full URL or path leading to the user management interface. |
-| `afterSignOutUrl` | `string` | The full URL or path to navigate to after a signing out from all accounts (applies to both single-session and multi-session apps). Default is `/`. |
-| `afterMultiSessionSingleSignOutUrl` | `string` | The full URL or path to navigate to after a signing out from currently active account (multisession apps). |
-| `afterSwitchSessionUrl` | `string` | The full URL or path to navigate to after a successful account change (multi-session apps). |
-| `defaultOpen` | `boolean` | Controls whether the `<UserButton />` should open by default during the first render. |
-| `userProfileProps` | `object` | Specify options for the underlying [`<UserProfile />`][userprofile-ref] component.<br/>For example, `{additionalOAuthScopes: {google: ['foo', 'bar'], github: ['qux']}}`. |
-
-## Customization
+## How to customize the `<UserButton />` component
 
 To learn about how to customize Clerk components, see the [customization documentation](/docs/components/customization/overview).
 
