--- a/docs/components/user/user-profile.mdx
+++ b/docs/components/user/user-profile.mdx
@@ -14,7 +14,18 @@ description: The `<UserProfile />` component is used to render a beautiful, full
 
 The `<UserProfile />` component is used to render a beautiful, full-featured account management UI that allows users to manage their profile and security settings.
 
-## Usage
+## `<UserProfile />` properties
+
+All props below are optional.
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
+| `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages. Defaults to `'path'`. |
+| `path` | `string` | The path where the component is mounted on when path-based routing is used.<br />For example, `/sign-in`<br />This prop is ignored in hash- and virtual-based routing.|
+| `additionalOAuthScopes` | `object` | Specify additional scopes per OAuth provider that your users would like to provide if not already approved. <br />e.g. `{google: ['foo', 'bar'], github: ['qux']}`. |
+
+## How to use the `<UserProfile />` component
 
 <Tabs type="framework" items={["Next.js", "React", "Remix"]}>
   <Tab>
@@ -66,19 +77,7 @@ The `<UserProfile />` component is used to render a beautiful, full-featured acc
   </Tab>
 </Tabs>
 
-
-## Properties
-
-All props below are optional.
-
-| Name | Type | Description |
-| --- | --- | --- |
-| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
-| `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages. Defaults to `'path'`. |
-| `path` | `string` | The path where the component is mounted on when path-based routing is used.<br />For example, `/sign-in`<br />This prop is ignored in hash- and virtual-based routing.|
-| `additionalOAuthScopes` | `object` | Specify additional scopes per OAuth provider that your users would like to provide if not already approved. <br />e.g. `{google: ['foo', 'bar'], github: ['qux']}`. |
-
-## Customization
+## How to customize the `<UserProfile />` component
 
 To learn about how to customize Clerk components, see the [customization documentation](/docs/components/customization/overview).
 
