--- a/docs/quickstarts/javascript.mdx
+++ b/docs/quickstarts/javascript.mdx
@@ -41,13 +41,13 @@ At the root of your project, install the ClerkJS package using your package mana
 ```html
 <script>
   // Get this URL from the Clerk Dashboard
-  const frontendApiUrl = '[your-domain].clerk.accounts.dev';
+  const frontendApiUrl = 'https://[your-domain].clerk.accounts.dev';
   const version = '@latest'; // Set to appropriate version
 
   // Creates asynchronous script
   const script = document.createElement('script');
   script.async = true;
-  script.src = `https://${frontendApiUrl}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
+  script.src = `${frontendApiUrl}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
   document.body.appendChild(script);
 </script>
 ```
@@ -89,13 +89,13 @@ await clerk.load({
 ```html filename="index.html"
 <script>
   const clerkPublishableKey = `{{pub_key}}`;
-  const frontendApiUrl = '[your-domain].clerk.accounts.dev';
+  const frontendApiUrl = 'https://[your-domain].clerk.accounts.dev';
   const version = '@latest';
   const script = document.createElement('script');
   script.setAttribute('data-clerk-frontend-api', frontendApiUrl);
   script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
   script.async = true;
-  script.src = `https://${frontendApiUrl}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
+  script.src = `${frontendApiUrl}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
 
   // Adds listener to initialize ClerkJS after it's loaded
   script.addEventListener('load', async function () {
