--- a/docs/references/nextjs/custom-signup-signin-pages.mdx
+++ b/docs/references/nextjs/custom-signup-signin-pages.mdx
@@ -5,11 +5,13 @@ description: Learn how to add custom sign-in and sign-up pages to your Next.js a
 
 # Build your own sign-in and sign-up pages for your Next.js app with Clerk
 
-Clerk offers a set of [prebuilt components](/docs/components/overview) and [custom flows](/docs/custom-flows/overview) that you can use to embed sign in, sign up, and other user management functions into your Next.js application. This guide shows how you use the [`<SignIn />`](/docs/components/authentication/sign-in) and [`<SignUp />`](/docs/components/authentication/sign-up) components with the [Next.js optional catch-all route](https://nextjs.org/docs/pages/building-your-application/routing/dynamic-routes#catch-all-segments).
+Clerk offers a set of [prebuilt components](/docs/components/overview) that you can use to embed sign in, sign up, and other user management functions into your Next.js application. This guide shows how you use the [`<SignIn />`](/docs/components/authentication/sign-in) and [`<SignUp />`](/docs/components/authentication/sign-up) components with the [Next.js optional catch-all route](https://nextjs.org/docs/pages/building-your-application/routing/dynamic-routes#catch-all-segments) to create custom sign-in and sign-up pages.
 
 <Callout>
   Just getting started with Clerk and Next.js? Check out the [quickstart tutorial](/docs/quickstarts/nextjs)!
 </Callout>
+
+{/* TODO: Update these Steps once Steps component accepts other headings types. These headings should be H2s. */}
 
 <Steps>
 
@@ -22,7 +24,7 @@ Create a new file that will be used to render the sign-up page. In the file, imp
 import { SignUp } from "@clerk/nextjs";
 
 export default function Page() {
-  return <SignUp />;
+  return <SignUp path="sign-up" />;
 }
 ```
 
@@ -30,7 +32,7 @@ export default function Page() {
 import { SignUp } from "@clerk/nextjs";
 
 export default function Page() {
-  return <SignUp />;
+  return <SignUp path="sign-up" />;
 }
 ```
 </CodeBlockTabs>
@@ -44,7 +46,7 @@ Create a new file that will be used to render the sign-in page. In the file, imp
 import { SignIn } from "@clerk/nextjs";
 
 export default function Page() {
-  return <SignIn />;
+  return <SignIn path="sign-in" />;
 }
 ```
 
@@ -52,14 +54,16 @@ export default function Page() {
 import { SignIn } from "@clerk/nextjs";
 
 export default function Page() {
-  return <SignIn />;
+  return <SignIn path="sign-in" />;
 }
 ```
 </CodeBlockTabs>
 
 ### Update your environment variables
 
-Next, add environment variables for the `signIn`, `signUp`, `afterSignUp`, and `afterSignIn` paths:
+In the previous steps, a `path` prop is passed to the `SignIn />` and `<SignUp />` components. This is because the components need to know which route they are originally mounted on.
+
+In Next.js applications, you can either pass the `path` prop to the `<SignIn />` component, or you can define the `NEXT_PUBLIC_CLERK_SIGN_IN_URL` and `NEXT_PUBLIC_CLERK_SIGN_UP_URL` environment variables, like so:
 
 ```sh filename=".env.local"
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
@@ -68,9 +72,23 @@ NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 ```
 
-These values control the behavior of the components when you sign in or sign up and when you click on the respective links at the bottom of each component.
-
 ### Visit your new pages
+
+Run your project with the following terminal command from the root directory of your project:
+  <CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
+    ```bash filename="terminal"
+    npm run dev
+    ```
+
+    ```bash filename="terminal"
+    yarn dev
+    ```
+
+    ```bash filename="terminal"
+    pnpm dev
+    ```
+
+  </CodeBlockTabs>
 
 Visit your new custom pages locally at [localhost:3000/sign-in](http://localhost:3000/sign-in) and [localhost:3000/sign-up](http://localhost:3000/sign-up).
 
@@ -80,7 +98,11 @@ Visit your new custom pages locally at [localhost:3000/sign-in](http://localhost
 
 <div className="container mx-auto my-4">
   <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
-    <Cards title="Customization & Localization" description="Learn how to customize and localize the Clerk components." link="/docs/components/customization/overview" cta="Learn More" />
+    <Cards title="Read user and session data" description="Learn how to use Clerk's hooks and helpers to access the active session and user data in your Next.js application." link="/docs/references/nextjs/read-session-data" cta="Learn More" />
+
+    <Cards title="Client Side Helpers" description="Learn more about Next.js client side helpers and how to use them." link="/docs/references/nextjs/overview#client-side-helpers" cta="Learn More" />
+
+    <Cards title="Next.js SDK Reference" description="Learn more about additional Next.js methods." link="/docs/references/nextjs/overview" cta="Learn More" />
 
     <Cards title="Clerk Components" description="Learn more about Clerk's prebuilt components that make authentication and user management easy." link="/docs/components/overview" cta="Learn More" />
   </div>
